--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>My Routine</title>
-        <!-- <link rel="stylesheet" href="../static/index.css"> -->
+        <link rel="stylesheet" href="../static/index.css">
     </head>
     <body>
         <main>
@@ -11,15 +11,15 @@
                 <p>Select a routine or create a new one.</p>
             </header>
             <div id="routine-div">
-                <p class="routine-btn"><a href="#">Routine 1</a></p>
-                <p class="routine-btn"><a href="#">Routine 2</a></p>
-                <p class="routine-btn"><a href="#">Routine 3</a></p>
-                <p class="routine-btn"><a href="#">Routine 4</a></p>
-                <p class="routine-btn"><a href="#">Routine 5</a></p>
-                <p class="routine-btn"><a href="#">Routine 6</a></p>
+                <p class="routine-btn">Routine 1</p>
+                <p class="routine-btn">Routine 2</p>
+                <p class="routine-btn">Routine 3</p>
+                <p class="routine-btn">Routine 4</p>
+                <p class="routine-btn">Routine 5</p>
+                <p class="routine-btn">Routine 6</p>
             </div>
             <div class=homepage-btn-div>
-                <p class="homepage-btn"><a href="/app/routine/create">Create Routine</a></p>
+                <p id="create-routine-btn" class="homepage-btn">Create Routine</p>
             </div>
         </main>
     </body>
