--- a/templates/index.html
+++ b/templates/index.html
@@ -10,17 +10,13 @@
                 <h1>Your Routines</h1>
                 <p>Select a routine or create a new one.</p>
             </header>
-            <div id="routine-div">
-                <p class="routine-btn">Routine 1</p>
-                <p class="routine-btn">Routine 2</p>
-                <p class="routine-btn">Routine 3</p>
-                <p class="routine-btn">Routine 4</p>
-                <p class="routine-btn">Routine 5</p>
-                <p class="routine-btn">Routine 6</p>
+            <div id="routine-btns-div">
+                <p>You don't have any routines. <a href="/app/routine/create" style="text-decoration: underline;">Make one now</a></p>
             </div>
             <div class=homepage-btn-div>
-                <p id="create-routine-btn" class="homepage-btn">Create Routine</p>
+                <button id="create-routine-btn" class="homepage-btn">Create Routine</button>
             </div>
         </main>
+        <script src="../static/index.js"></script>
     </body>
 </html>
